Adiciona tratamento de exceções ao buscar propriedades no MapaController e atualiza URL de temperaturas em TemperaturaServico.